# brainfuck_ocaml

./: README.md  brainfuck_ocaml.opam  dune-project  input3.txt  input5.txt  input7.txt  input8.txt
lib/: brainfuck_ocaml_lib.ml  brainfuck_ocaml_lib.mli  dune
test/: dune
