(lang dune 3.5)

(name brainfuck_ocaml)

(generate_opam_files true)

(source
 (github ggdover/brainfuck_ocaml))

(authors "ggdover")

(maintainers "ggdover")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name brainfuck_ocaml)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml dune)
 (tags
  (topics "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
